<resources>
    <string name="app_name">Google Kirana</string>
    <string name="scan">Scan Barcode</string>
    <string name="upload">Upload from gallery</string>
    <string name="ok">OK</string>
    <string name="finish">Finish</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>
    <string name="desc_image_convert_activity">Image format conversions testing Activity</string>
    <string name="desc_sdk_doctor_activity">SDK Doctor testing Activity</string>
    <string name="desc_model_download_activity">Custom Model Download testing Activity</string>
    <string name="download_error">Download error</string>
    <string name="start_over">Start over</string>
    <string name="menu_item_settings">Settings</string>
    <string name="sign_out">Sign Out</string>

    <!-- Settings related strings. -->
    <string name="pref_screen_title_live_preview">Live preview settings</string>
    <string name="pref_screen_title_still_image">Still image settings</string>
    <string name="pref_category_face_detection">Face detection</string>
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_category_automl">AutoML Image Labeling</string>

    <!-- Strings for camera settings. -->
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size">Front camera preview size</string>
    <string name="pref_title_camera_live_viewport">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>

    <!-- Strings for object detector enable multiple objects preference. -->
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>

    <!-- Strings for object detector enable classification preference. -->
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>

    <!-- Strings for face detector landmark mode preference. -->
    <string name="pref_title_face_detector_landmark_mode">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks">All landmarks</string>
    <!-- The following entry values must match the ones in FirebaseVisionFaceDetectorOptions#LandmarkMode -->
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>

    <!-- Strings for face detector contour mode preference. -->
    <string name="pref_title_face_detector_contour_mode">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours">All contours</string>
    <!-- The following entry values must match the ones in FirebaseVisionFaceDetectorOptions#ContourMode -->
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>

    <!-- Strings for face detector classification mode preference. -->
    <string name="pref_title_face_detector_classification_mode">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications">All classifications</string>
    <!-- The following entry values must match the ones in FirebaseVisionFaceDetectorOptions#ClassificationMode -->
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>

    <!-- Strings for face detector performance mode preference. -->
    <string name="pref_title_face_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate">Accurate</string>
    <!-- The following entry values must match the ones in FirebaseVisionFaceDetectorOptions#PerformanceMode -->
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>

    <!-- Strings for face detector face tracking preference. -->
    <string name="pref_title_face_detector_face_tracking">Face tracking</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>

    <!-- Strings for face detector min face size preference. -->
    <string name="pref_title_face_detector_min_face_size">Minimum face size</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_dialog_message_face_detector_min_face_size">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_toast_invalid_min_face_size">Minimum face size must be a float value and in the range [0.0, 1.0]</string>

    <!-- Strings for automl remote model name preference. -->
    <string name="pref_title_automl_remote_model_name">AutoML Remote Model Name</string>
    <string name="pref_key_live_preview_automl_remote_model_name" translatable="false">lparmn</string>
    <string name="pref_dialog_message_automl_remote_model_name">Remote model name in the Firebase Console.</string>

    <!-- Strings for automl model choices preference. -->
    <string name="pref_title_automl_model_choices">AutoML Model Choices</string>
    <string name="pref_entries_automl_models_remote">Remote</string>
    <string name="pref_entries_automl_models_local">Local</string>
    <string name="pref_key_live_preview_automl_remote_model_choices" translatable="false">lparmc</string>
    <string name="ean">EAN:</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="upload_video">Upload video</string>
    <string name="processing">Processing…</string>
    <string name="error_retrieve_image">Error retrieving image</string>
    <string name="error_processing_video">Error processing video</string>
    <string name="no_barcode_found">No barcodes found!</string>
    <string name="error_processing_image">Error processing image</string>
    <string name="select_video">Select Video</string>
    <string name="select_picture">Select Picture</string>
    <string name="set_discount_price">Set your price</string>
    <string name="rupee">₹</string>
    <string name="product_image">product image</string>
    <string name="mrp">MRP:</string>
    <string name="discounted_price">Your price:</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="point_at_a_barcode_to_scan">Point at a barcode to scan</string>
    <string name="barcode_scanner_frame">barcode scanner frame</string>
    <string name="tap_to_dimiss">Tap to dimiss</string>
    <string name="help">Help</string>
    <string name="scan_text_ocr">Scan Text OCR</string>
    <string name="add">Add</string>
    <string name="discard">Discard</string>
    <string name="suggested_products">Suggested products</string>
    <string name="clear_all">Clear all</string>
    <string name="point_at_product_text_to_scan">Point at product text to scan</string>
    <string name="create_a_bill">Create a bill</string>
    <string name="percent">%</string>
    <string name="set_quantity">Set quantity</string>
    <string name="quick_add_message">Some products are not in your inventory.</string>
    <string name="products_added_to_inventory">Product(s) added to inventory</string>
    <string name="data_update_failed">Error: data update failed</string>
    <string name="set_discount">Set discount</string>
    <string name="debug_tools">Debug tools</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="not_available">Not Available</string>
    <string name="customer_name_placeholder">Raghu\'s order</string>
    <string name="new_orders">New orders</string>
    <string name="profile_icon">Profile icon</string>
    <string name="inventory">Inventory</string>
    <string name="ongoing_orders">Ongoing orders</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_logo">google logo</string>
    <string name="app_title_msg">Digital Bharat ka Kirana app</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="call">Call</string>
</resources>
