<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/pref_category_key_camera"
        android:title="@string/pref_category_title_camera">

        <ListPreference
            android:key="@string/pref_key_rear_camera_preview_size"
            android:persistent="true"
            android:title="@string/pref_title_rear_camera_preview_size" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_camera_live_viewport"
            android:persistent="true"
            android:summary="@string/pref_summary_camera_live_viewport"
            android:title="@string/pref_title_camera_live_viewport" />

    </PreferenceCategory>

</PreferenceScreen>
