<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.googleinterns.smb.common.CameraSourcePreview
            android:id="@+id/firePreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.googleinterns.smb.common.GraphicOverlay
                android:id="@+id/fireFaceOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.googleinterns.smb.common.CameraSourcePreview>

        <LinearLayout
            android:id="@+id/help_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onHelpDismiss"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/help_text"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@color/fui_transparent"
                android:text="@string/point_at_a_barcode_to_scan"
                android:textAlignment="center"
                android:textColor="#99FFFFFF" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/barcode_scanner_frame"
                app:srcCompat="@drawable/scanner" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/fui_transparent"
                android:text="@string/tap_to_dimiss"
                android:textAlignment="center"
                android:textColor="#99FFFFFF" />
        </LinearLayout>

    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="finishScan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_action_done" />

</androidx.constraintlayout.widget.ConstraintLayout>